[project]
dependencies = [
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "parsel>=1.8.1",
  "uvicorn>=0.34.0",
  "PyJWT>=2.8.0",
  "sentry-sdk>=2.20.0",
  "pocketbase-orm>=0.12.0",
  "loguru>=0.7.3",
  "requests>=2.32.3",
]
description = "Add your description here"
name = "ocai-api"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
